syz-agent/k8s/common/syz-agent.yaml
# Copyright 2026 syzkaller project authors. All rights reserved.
# Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syz-agent
  namespace: syz-agent
  annotations:
    ignore-check.kube-linter.io/non-existent-service-account: "Service account is defined in Terraform"
    ignore-check.kube-linter.io/sensitive-host-mounts: "Mounting /dev is needed to access dynamically created loop devices during kernel image embedding"
spec:
  serviceName: "syz-agent"
  replicas: 6
  selector:
    matchLabels:
      app: syz-agent
  template:
    metadata:
      labels:
        app: syz-agent
    spec:
      serviceAccountName: syz-agent-ksa
      containers:
      - name: syz-agent
        image: gcr.io/syzkaller/syz-agent:latest # Replace with your image.
        args:
          - "-name=$(POD_NAME)"
          - "-config=/etc/syz-agent/config.json"
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: "14"
            memory: "56Gi"
          limits:
            cpu: "32"
            memory: "96Gi"
        volumeMounts:
          - name: config-volume
            mountPath: /etc/syz-agent
            readOnly: true
          - name: workdir
            mountPath: /app/workdir
          - name: dev-kvm
            mountPath: /dev/kvm
          - name: dev
            mountPath: /dev
      volumes:
        - name: config-volume
          configMap:
            name: syz-agent-config
        - name: dev-kvm
          hostPath:
            path: /dev/kvm
            type: CharDevice
        - name: dev
          hostPath:
            path: /dev
            type: Directory
  volumeClaimTemplates:
  - metadata:
      name: workdir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 512Gi
